k8s/overlays/openshift/remove-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qainsight-ingress
  namespace: qainsight-ai
$patch: delete
